--- a/frontend4/src/app/bank/listbankers/listbankers.component.html
+++ b/frontend4/src/app/bank/listbankers/listbankers.component.html
@@ -2,31 +2,20 @@
     <div class="col-md-8">
       <div class="input-group mb-3">
         <input
-          type="text"
-          class="form-control"
-          placeholder="Search by title"
-          [(ngModel)]="name1"
-        />
+          type="text"  class="form-control"
+          placeholder="Search by title"   [(ngModel)]="name1"/>
         <div class="input-group-append">
-          <button
-            class="btn btn-outline-secondary"
-            type="button"
-            (click)="searchName()"
-          >
-            Search
-          </button>
+          <button  class="btn btn-outline-secondary" type="button"
+            (click)="searchName()" > Search</button>
         </div>
       </div>
     </div>
     <div class="col-md-6">
-      <h4>Zanaco Bankers List</h4>
+      <h4>Zanaco Bankers POST List</h4>
       <ul class="list-group">
         <li
-          class="list-group-item"
-          *ngFor="let banker of bankers; let i = index"
-          [class.active]="i == currentIndex"
-          (click)="setBankerActive(banker, i)"
-        >
+          class="list-group-item"  *ngFor="let banker of bankers; let i = index"
+          [class.active]="i == currentIndex" (click)="setBankerActive(banker, i)" >
           {{ banker.name1 }}  {{ banker.salary }}
         </li>
       </ul>
@@ -59,4 +48,42 @@
       </div>
     </div>
   </div>
+
+  <br>
+<header class="masthead bg-primary text-white text-center">
+  <div class="container"><br>
+    <h2 class="text-uppercase mb-0"> DETAILS OF BANKERS </h2>
+    <hr class="star-light">
+  </div>
+</header>
+<div class="container">
+  <table class="table table-striped">
+    <thead>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Position</th>
+      <th>dept</th>
+      <th>salary</th>
+      <th>Status </th>
+      <th colspan="2">Actions</th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let worker of bankers">
+        <td>{{worker.id}}</td>
+        <td>{{worker.name1}}</td>
+        <td>{{worker.post}}</td>
+        <td>{{worker.dept}}</td>
+        <td>{{worker.salary}}</td>
+        <td>{{worker.published}}</td>
+        <td>
+          <button class="btn btn-danger" (click)="editBanker(worker)">Add</button>
+          <button class="btn btn-danger" (click)="editBanker(worker)">Edit</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <button class="btn btn-primary" (click)="addBanker()">Add new entry to the Room</button>
+
+</div>
+<br><br>
   
