--- a/frontend4/src/app/app.component.html
+++ b/frontend4/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="navbar-nav mr-auto">
 
       <li class="nav-item">
-        <a routerLink="banks" class="nav-link"> List of Bankers at ZANACO</a>
+        <a routerLink="banks" class="nav-link"> List of Bankers</a>
       </li>
       <li class="nav-item">
         <a routerLink="addbanker" class="nav-link">Add new Banker</a>
