synch of bankers and dashbboard employees

--- a/fAng09/src/app/bank/addbanker/addbanker.component.html
+++ b/fAng09/src/app/bank/addbanker/addbanker.component.html
@@ -3,8 +3,8 @@
     <div *ngIf="!submitted">
 
       <div class="form-group">
-        <label for="title">Namea</label> <input type="text" class="form-control" id="name1" required
-          [(ngModel)]="banker.name1" name="name1" /> </div>
+        <label for="title">Namea</label> <input type="text" class="form-control" id="name" required
+          [(ngModel)]="banker.name" name="name" /> </div>
       <div class="form-group">
         <label for="description">addresa</label>
         <input class="form-control" id="post" required [(ngModel)]="banker.post" name="post" /> </div>
