--- a/fAng09/src/app/bank/detailbanker/detailbanker.component.html
+++ b/fAng09/src/app/bank/detailbanker/detailbanker.component.html
@@ -2,9 +2,9 @@
     <div *ngIf="activeBanker" class="edit-form">
       <h4> ZANACO - BANKER</h4>
       <form>
-        <div class="form-group">        <label for="name1">Named</label>
+        <div class="form-group">        <label for="name">Named</label>
           <input          type="text"          class="form-control"
-            id="name1"  [(ngModel)]="activeBanker.name1"    name="name1"/> </div>
+            id="name"  [(ngModel)]="activeBanker.name"    name="name"/> </div>
         <div class="form-group">
           <label for="dept">Departmentd</label> <input  type="text"     class="form-control" 
              id="dept" [(ngModel)]="activeBanker.dept"  name="dept"  />
