--- a/fAng11/src/app/bank/addbanker/addbanker.component.html
+++ b/fAng11/src/app/bank/addbanker/addbanker.component.html
@@ -3,17 +3,17 @@
     <div *ngIf="!submitted">
 
       <div class="form-group">
-        <label for="title">Namea</label> <input type="text" class="form-control" id="name1" required
-          [(ngModel)]="banker.name1" name="name1" /> </div>
+        <label for="title">Name</label> <input type="text" class="form-control" id="name" required
+          [(ngModel)]="banker.name" name="name" /> </div>
       <div class="form-group">
-        <label for="description">addresa</label>
+        <label for="description">Post</label>
         <input class="form-control" id="post" required [(ngModel)]="banker.post" name="post" /> </div>
-      <div> <label for="description">departmenta</label>
+      <div> <label for="description">Department</label>
         <input class="form-control" id="dept" required [(ngModel)]="banker.dept" name="dept" /> </div>
-      <div class="form-group"> <label for="title">salarya</label>
+      <div class="form-group"> <label for="title">salary</label>
         <input type="text" class="form-control" id="salary" required [(ngModel)]="banker.salary" name="salary" />
       </div>
-      <button (click)="saveBanker()" class="btn btn-success">Submit</button>
+      <button (click)="saveBanker()" class="btn btn-success">Submit Data</button>
     </div>
 
     <div *ngIf="submitted">
