--- a/fAng11/src/app/bank/detailbanker/detailbanker.component.html
+++ b/fAng11/src/app/bank/detailbanker/detailbanker.component.html
@@ -2,18 +2,18 @@
     <div *ngIf="activeBanker" class="edit-form">
       <h4> ZANACO - BANKER</h4>
       <form>
-        <div class="form-group">        <label for="name1">Named</label>
+        <div class="form-group">        <label for="name">Name</label>
           <input          type="text"          class="form-control"
-            id="name1"  [(ngModel)]="activeBanker.name1"    name="name1"/> </div>
+            id="name"  [(ngModel)]="activeBanker.name"    name="name"/> </div>
         <div class="form-group">
-          <label for="dept">Departmentd</label> <input  type="text"     class="form-control" 
+          <label for="dept">Department</label> <input  type="text"     class="form-control" 
              id="dept" [(ngModel)]="activeBanker.dept"  name="dept"  />
         </div>
-        <div class="form-group">        <label for="post">addres</label>
+        <div class="form-group">        <label for="post">Post</label>
           <input          type="text"          class="form-control"
             id="post"  [(ngModel)]="activeBanker.post"    name="post"/> </div>
         <div class="form-group">
-          <label for="description">salaryd</label> <input  type="text"     class="form-control" 
+          <label for="description">Salary</label> <input  type="text"     class="form-control" 
              id="salary" [(ngModel)]="activeBanker.salary"  name="salary"  />
         </div>
   
